            - New routines hasLocks(), lockBoundary(), and unlockAll(), to
              work with locked top-dimensional simplices and their facets.
            - New routine reorderBFS(), which essentially makes the old
              Triangulation<3>::reorderTetrahedraBFS() available in all
              dimensions.
            - New routine hash(), which uses the tight encoding.
            - Renamed simplifiedFundamentalGroup to setGroupPresentation().
              The old name is deprecated but kept for backwards compatibility.
        Class Triangulation<3>:
            - Routine puncture() now takes an optional triangle, not an
              optional tetrahedron.  The old version is kept but deprecated.
            - Routine insertLayeredSolidTorus() is now non-recursive, and
              throws an exception if its preconditions fail.
            - Routines layerOn(), pinchEdge() and puncture() now throw an
              exception if their preconditions fail.
            - Routine reorderTetrahedraBFS() is now a deprecated alias for
              reorderBFS() (which is available in all dimensions).
        Class Vector<T>:
            - Added support for tight encodings and decodings.
            - New routine hash(), which uses the tight encoding.
        Constant is_cpp_integer_v<T>:
            - New alternative to std::is_integeral_v<T> that allows for
              128-bit integers also.
    PYTHON:
        - Updated the included pybind11 library from 2.10.0 to 2.10.4.
        - Improved the speed of iteration (specifically, throwing/catching
          StopIteration exceptions).
    USER INTERFACE:
        - Now uses multithreading for those long computations that support it.

Version 7.3  [ 18 March, 2023 ]

    ENGINE:
        Class BitManipulator<T>:
            - Routines bits(), firstBit() and lastBit() are now constexpr.
        Class Component<4>:
            - Fix a bug where single-vertex boundary components were included