@@ -2751,6 +2751,89 @@ class TriangulationBase :
          */
         std::string dumpConstruction() const;
 
+        /**
+         * Writes the dual graph of this triangulation in the Graphviz DOT
+         * language.
+         *
+         * See dot() for further details on what this output contains.
+         *
+         * This routine is equivalent to (but faster than) writing the
+         * string returned by dot() to the given output stream.
+         *
+         * \nopython Use dot() instead, which returns a string.
+         *
+         * \param out the output stream to which to write.
+         * \param prefix a string to prepend to the name of each graph
+         * vertex, and to include in the graph name; see dot() for details.
+         * \param subgraph \c false if a complete standalone DOT graph
+         * should be output, or \c true if a clustered subgraph should
+         * be output for use in some larger DOT file.
+         * \param labels indicates whether graph vertices will be labelled
+         * with the corresponding simplex numbers.
+         *
+         * \see http://www.graphviz.org/
+         */
+        void writeDot(std::ostream& out, const char* prefix = nullptr,
+            bool subgraph = false, bool labels = false) const;
+
+        /**
+         * Returns a Graphviz DOT representation of the dual graph of this
+         * triangulation.
+         *
+         * Every vertex of this graph represents a top-dimensional simplex,
+         * and every edge represents a pair of simplex facets that are joined
+         * together.  Note that for a closed triangulation this graph will be
+         * entirely (\a dim + 1)-valent; for triangulations with boundary
+         * facets, some graph vertices will have degree \a dim or less.
+         *
+         * The graph can either be written as a complete DOT graph, or
+         * as a clustered subgraph within some larger DOT graph
+         * (according to whether the argument \a subgraph is passed as
+         * \c false or \c true).
+         *
+         * If a complete DOT graph is being written, the output may be
+         * used as a standalone DOT file ready for use with Graphviz.
+         *
+         * If a subgraph is being written, the output will contain a
+         * single \c subgraph section that should be inserted into some
+         * larger DOT file.  Note that the output generated by
+         * FacetPairing<dim>::dotHeader() or
+         * FacetPairing<dim>::writeDotHeader(), followed by one or more
+         * subgraphs and then a closing curly brace will suffice.  The
+         * subgraph name will begin with the string \c tri_.
+         *
+         * The argument \a prefix will be prepended to the name of each
+         * graph vertex, and will also be used in the name of the graph
+         * or subgraph.  Using unique prefixes becomes important if you
+         * are calling dot() or writeDot() several times to generate several
+         * subgraphs for use in a single DOT file.  If the \a prefix
+         * argument is null or empty then a default prefix will be used.
+         *
+         * Note that this routine generates undirected graphs, not
+         * directed graphs.  The final DOT file should be used with
+         * either the \a neato or \a fdp programs shipped with Graphviz.
+         *
+         * The strings returned by `dot()` versus `pairing().dot()`
+         * are almost identical: the only differences are the subgraph names
+         * (if relevant), and the fact that Triangulation::dot() will use
+         * colours to indicate locked top-dimensional simplices and/or facets.
+         *
+         * If you are simply writing this string to an output stream then you
+         * should call writeDot() instead, which is more efficient.
+         *
+         * \param prefix a string to prepend to the name of each graph
+         * vertex, and to include in the graph or subgraph name; see
+         * above for details.
+         * \param subgraph \c false if a complete standalone DOT graph
+         * should be output, or \c true if a clustered subgraph should
+         * be output for use in some larger DOT file.
+         * \param labels indicates whether graph vertices will be labelled
+         * with the corresponding simplex numbers.
+         * \return the output of writeDot(), as outlined above.
+         */
+        std::string dot(const char* prefix = nullptr, bool subgraph = false,
+            bool labels = false) const;
+
         /*@}*/
         /**
          * \name Importing Triangulations
@@ -4752,6 +4835,14 @@ std::string TriangulationBase<dim>::dumpConstruction() const {
         }
     }
     ans << "});\n";
+    return ans.str();
+}
+
+template <int dim>
+inline std::string TriangulationBase<dim>::dot(
+        const char* prefix, bool subgraph, bool labels) const {
+    std::ostringstream ans;
+    writeDot(ans, prefix, subgraph, labels);
     return ans.str();
 }
 
