@@ -116,4 +116,7 @@ template void TriangulationBase<10>::reorderBFS(bool);
 template void TriangulationBase<10>::makeDoubleCover();
 template bool TriangulationBase<10>::finiteToIdeal();
 
+template void TriangulationBase<10>::writeDot(std::ostream&, const char*,
+    bool, bool) const;
+
 } // namespace regina::detail
