@@ -136,4 +136,7 @@ template void TriangulationBase<14>::reorderBFS(bool);
 template void TriangulationBase<14>::makeDoubleCover();
 template bool TriangulationBase<14>::finiteToIdeal();
 
+template void TriangulationBase<14>::writeDot(std::ostream&, const char*,
+    bool, bool) const;
+
 } // namespace regina::detail
