@@ -141,4 +141,7 @@ template void TriangulationBase<15>::reorderBFS(bool);
 template void TriangulationBase<15>::makeDoubleCover();
 template bool TriangulationBase<15>::finiteToIdeal();
 
+template void TriangulationBase<15>::writeDot(std::ostream&, const char*,
+    bool, bool) const;
+
 } // namespace regina::detail
