@@ -77,4 +77,7 @@ template void TriangulationBase<2>::makeDoubleCover();
 template void TriangulationBase<2>::subdivide();
 template bool TriangulationBase<2>::finiteToIdeal();
 
+template void TriangulationBase<2>::writeDot(std::ostream&, const char*,
+    bool, bool) const;
+
 } // namespace regina::detail
