@@ -89,4 +89,7 @@ template void TriangulationBase<5>::reorderBFS(bool);
 template void TriangulationBase<5>::makeDoubleCover();
 template bool TriangulationBase<5>::finiteToIdeal();
 
+template void TriangulationBase<5>::writeDot(std::ostream&, const char*,
+    bool, bool) const;
+
 } // namespace regina::detail
