@@ -94,4 +94,7 @@ template void TriangulationBase<6>::reorderBFS(bool);
 template void TriangulationBase<6>::makeDoubleCover();
 template bool TriangulationBase<6>::finiteToIdeal();
 
+template void TriangulationBase<6>::writeDot(std::ostream&, const char*,
+    bool, bool) const;
+
 } // namespace regina::detail
