@@ -99,4 +99,7 @@ template void TriangulationBase<7>::reorderBFS(bool);
 template void TriangulationBase<7>::makeDoubleCover();
 template bool TriangulationBase<7>::finiteToIdeal();
 
+template void TriangulationBase<7>::writeDot(std::ostream&, const char*,
+    bool, bool) const;
+
 } // namespace regina::detail
