@@ -338,8 +338,7 @@ void FacetGraphTab::showError(const QString& msg) {
 }
 
 std::string Dim2EdgeGraphData::dual(bool withLabels) {
-    regina::FacetPairing<2> pairing(*tri_);
-    return pairing.dot(nullptr /* prefix */, false /* subgraphs */, withLabels);
+    return tri_->dot(nullptr /* prefix */, false /* subgraphs */, withLabels);
 }
 
 std::string Dim2EdgeGraphData::treeDecomp(bool nice, size_t& bags,
@@ -377,8 +376,7 @@ regina::Packet* Dim2EdgeGraphData::getPacket() {
 }
 
 std::string Dim3FaceGraphData::dual(bool withLabels) {
-    regina::FacetPairing<3> pairing(*tri_);
-    return pairing.dot(nullptr /* prefix */, false /* subgraphs */, withLabels);
+    return tri_->dot(nullptr /* prefix */, false /* subgraphs */, withLabels);
 }
 
 std::string Dim3FaceGraphData::treeDecomp(bool nice, size_t& bags,
@@ -416,8 +414,7 @@ regina::Packet* Dim3FaceGraphData::getPacket() {
 }
 
 std::string Dim4FacetGraphData::dual(bool withLabels) {
-    regina::FacetPairing<4> pairing(*tri_);
-    return pairing.dot(nullptr /* prefix */, false /* subgraphs */, withLabels);
+    return tri_->dot(nullptr /* prefix */, false /* subgraphs */, withLabels);
 }
 
 std::string Dim4FacetGraphData::treeDecomp(bool nice, size_t& bags,
